[gd_scene load_steps=3 format=2]

[ext_resource path="res://tictactoe.png" type="Texture" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]

[node name="Node" type="Node"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1681.0
margin_bottom = 1035.0
color = Color( 0.145098, 0.129412, 0.129412, 1 )

[node name="Tictactoe" type="Sprite" parent="ColorRect"]
position = Vector2( 654, 346 )
texture = ExtResource( 1 )

[node name="Buttons" type="Node" parent="."]

[node name="Button1" type="Button" parent="Buttons"]
margin_left = 363.0
margin_top = 80.0
margin_right = 519.0
margin_bottom = 209.0
flat = true

[node name="Button2" type="Button" parent="Buttons"]
margin_left = 594.0
margin_top = 86.0
margin_right = 710.0
margin_bottom = 196.0
flat = true

[node name="Button3" type="Button" parent="Buttons"]
margin_left = 801.0
margin_top = 113.0
margin_right = 908.0
margin_bottom = 196.0
flat = true

[node name="Button4" type="Button" parent="Buttons"]
margin_left = 386.0
margin_top = 308.0
margin_right = 510.0
margin_bottom = 403.0
flat = true

[node name="Button5" type="Button" parent="Buttons"]
margin_left = 602.0
margin_top = 308.0
margin_right = 709.0
margin_bottom = 391.0
flat = true

[node name="Button6" type="Button" parent="Buttons"]
margin_left = 801.0
margin_top = 308.0
margin_right = 908.0
margin_bottom = 391.0
flat = true

[node name="Button7" type="Button" parent="Buttons"]
margin_left = 386.0
margin_top = 492.0
margin_right = 506.0
margin_bottom = 602.0
flat = true

[node name="Button8" type="Button" parent="Buttons"]
margin_left = 602.0
margin_top = 519.0
margin_right = 709.0
margin_bottom = 602.0
flat = true

[node name="Button9" type="Button" parent="Buttons"]
margin_left = 801.0
margin_top = 519.0
margin_right = 908.0
margin_bottom = 602.0
flat = true

[node name="Host" type="Button" parent="."]
margin_left = 189.0
margin_top = 80.0
margin_right = 461.0
margin_bottom = 184.0
text = "Host"

[node name="Join" type="Button" parent="."]
margin_left = 801.0
margin_top = 80.0
margin_right = 1073.0
margin_bottom = 184.0
text = "Join"

[connection signal="pressed" from="Buttons/Button1" to="." method="_on_Button_pressed" binds= [ "1" ]]
[connection signal="pressed" from="Buttons/Button2" to="." method="_on_Button_pressed" flags=6 binds= [ "2" ]]
[connection signal="pressed" from="Buttons/Button3" to="." method="_on_Button_pressed" flags=6 binds= [ "3" ]]
[connection signal="pressed" from="Buttons/Button4" to="." method="_on_Button_pressed" flags=6 binds= [ "4" ]]
[connection signal="pressed" from="Buttons/Button5" to="." method="_on_Button_pressed" flags=6 binds= [ "5" ]]
[connection signal="pressed" from="Buttons/Button6" to="." method="_on_Button_pressed" flags=6 binds= [ "6" ]]
[connection signal="pressed" from="Buttons/Button7" to="." method="_on_Button_pressed" flags=6 binds= [ "7" ]]
[connection signal="pressed" from="Buttons/Button8" to="." method="_on_Button_pressed" flags=6 binds= [ "8" ]]
[connection signal="pressed" from="Buttons/Button9" to="." method="_on_Button_pressed" flags=6 binds= [ "9" ]]
[connection signal="pressed" from="Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="Join" to="." method="_on_Join_pressed"]
